# motion_robot

./: .gitignore  CMakeLists.txt  README.md  package.xml
assets/data/: Walk_1_Skeleton0_g1_29dof_rev_1_0_Tpose_new.npy
doc/: common_bat.md  continuous_mode_usage.md  data.md  doc.md  project_workflow.md  tmp.md  unitree.md
include/motion_robot/: g1_controller.hpp  g1_joint.hpp  joint_mapper.hpp  motion_robot.hpp  motor_crc.hpp  topic_data_getter.hpp
launch/: motion_robot.launch.py  vrpn_test.launch.py
off-line/: config.py  g1_controller.py  g1_ros_player.py
src/: g1_controller.cpp  joint_mapper.cpp  main.cpp  motion_robot.cpp  motor_crc.cpp  topic_data_getter.cpp  vrpn_test_node.cpp
test/: vrpn_topic_test.cpp
